[package]
name = "wake_up_neo"
version = "1.0.0"
authors = ["Watagon <coding.watahiki@gmail.com>"]
edition = "2021"
description = "Simulates the hacked terminal from \"The Matrix\""
repository = "https://github.com/Watagon/wake_up_neo"
license = "MIT"
keywords = ["matrix", "Wake-up-Neo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
console = "0.15.0"
ctrlc = "3.2.5"
rand = "0.8.5"
